--- a/Views/index.handlebars
+++ b/Views/index.handlebars
@@ -28,7 +28,7 @@
 		<div class=formulario-cabecalho>
 			<h2 class="titulo-form">Adicionar paciente</h2>
 		</div>
-		<form id="form-adiciona" class="form-adiciona">
+		<form action="/criado" method="POST" id="form-adiciona" class="form-adiciona">
 			<div class="campos-form">
 				<label for="atendente">Atendente:</label>
 				<input id="atendente" name="atendente" type="text" placeholder="RRIBEIRO" minlength="3" maxlength="14"
@@ -134,7 +134,7 @@
 					class="campo" value="SEM AGENDA">
 			</div>
 
-			<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+			<button type="submit"  id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 		</form>
 	</section>
 	<section class="campo-situacao">
