Removendo funcao de limpar formulário para corrigir envio do post

--- a/Views/index.handlebars
+++ b/Views/index.handlebars
@@ -28,7 +28,7 @@
 		<div class=formulario-cabecalho>
 			<h2 class="titulo-form">Adicionar paciente</h2>
 		</div>
-		<form action="/criado" method="POST" id="form-adiciona" class="form-adiciona">
+		<form action="/enviado" method="POST" id="form-adiciona" class="form-adiciona">
 			<div class="campos-form">
 				<label for="atendente">Atendente:</label>
 				<input id="atendente" name="atendente" type="text" placeholder="RRIBEIRO" minlength="3" maxlength="14"
