Adicionando classe botão-desativado e adicionando na função de validação

--- a/Views/index.handlebars
+++ b/Views/index.handlebars
@@ -134,7 +134,7 @@
 					class="campo" value="SEM AGENDA">
 			</div>
 
-			<button type="submit"  id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+			<button type="submit"  id="adicionar-paciente" class="botao">Adicionar</button>
 		</form>
 	</section>
 	<section class="campo-situacao">
