Criando pasta Layouts dentro de Views e alterando index.js para novo diretório

--- a/Views/layouts/index.handlebars
+++ b/Views/layouts/index.handlebars
@@ -19,8 +19,8 @@
 			<img class='logo' src="/img/logo.png">
 		</div>
 		<nav id='menu-navegacao' class='menu-navegacao'>
-			<a class='link-navegacao' href="/Views/index.html">Incio</a>
-			<a class='link-navegacao' href="/Views/Pacientes.html">Pacientes</a>
+			<a class='link-navegacao' href="/">Incio</a>
+			<a class='link-navegacao' href="/Pacientes">Pacientes</a>
 		</nav>
 	</header>
 
