Alterando o nome do index.handlebars e criando rota para pacientes.handlebars

--- a/Views/layouts/main.handlebars
+++ b/Views/layouts/main.handlebars
@@ -20,7 +20,7 @@
 		</div>
 		<nav id='menu-navegacao' class='menu-navegacao'>
 			<a class='link-navegacao' href="/">Incio</a>
-			<a class='link-navegacao' href="/Pacientes">Pacientes</a>
+			<a class='link-navegacao' href="/pacientes">Pacientes</a>
 		</nav>
 	</header>
 
