Criando novo arquivo para listar os pacientes do Banco de dados e excluindo arquivos não utilizados
Novo arquivo ejs para listar os pacientes recém cadastrados, alterado a variável sequelize que cria o paciente para "Pacientes" e exclusão de arquivos antigos não utilizados.

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -101,26 +101,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class="tr-conteudo">
-				<td class="td-conteudo">123456-7</td>
-				<td class="td-conteudo">19/12/2020</td>
-				<td class="td-conteudo">David Teixeira</td>
-				<td class="td-conteudo">03/05/1996</td>
-				<td	class="td-conteudo">3313-3315</td>
-				<td class="td-conteudo">96712-3982</td>
-				<td	class="td-conteudo">Cardiologia</td>
-				<td	class="td-conteudo">Sem agenda</td>
-			</tr>
-			<tr class="tr-conteudo">
-				<td class="td-conteudo">222333-7</td>
-				<td class="td-conteudo">19/12/2020</td>
-				<td class="td-conteudo">Oliver Silva</td>
-				<td class="td-conteudo">05/05/1996</td>
-				<td	class="td-conteudo">21-3313-3315</td>
-				<td class="td-conteudo">21-96712-3982</td>
-				<td	class="td-conteudo">Endocrinologia</td>
-				<td	class="td-conteudo">Sem agenda,senha:723856858 val:07/02</td>
-			</tr>
+			<%- include ('../partials/ListaPacientes') %> 
 		</tbody>
 	</table>
 </body>
