--- a/Views/pages/login.ejs
+++ b/Views/pages/login.ejs
@@ -9,7 +9,7 @@
 
     <header class="cabecalho">
       <div class="conteudo-cabecalho">
-        <img class='logo' src="/img/logo.png">
+        <a href="/login"><img class='logo' src="/img/logo.png"></a>
     </div>
     </header>
     
@@ -19,12 +19,7 @@
       <input id="login" class="form-control login" placeholder="Seu usuário" required="" autofocus="" autocomplete="off">
       <label for="senha" class="sr-only">Senha</label>
       <input type="password" id="senha" class="form-control senha" placeholder="Senha" required="">
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Lembrar de mim
-        </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+      <button class="btn btn-lg btn-primary btn-block btn-login" type="submit">Login</button>
       <p class="mt-5 mb-3 text-muted">© 2021</p>
     </form>
   
