--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,8 +6,17 @@
     margin-top: 6rem;
 }
 
-
-
 .login{
     margin-bottom: .5rem;
+}
+
+.btn-login{
+    margin-top: 1rem;
+    background-color: darkblue;
+    border-color:darkblue ;
+}
+
+.btn-login:hover{
+    background-color: black;
+    border-color:black ;
 }
