Criando arquivos para registro de usuario e estilização do login

--- a/Views/pages/login.ejs
+++ b/Views/pages/login.ejs
@@ -14,7 +14,9 @@
     </header>
     
     <form class="form-login">
-      <h1 class="h3 mb-3 font-weight-normal">Faça login</h1>
+      <div class=formulario-cabecalho>
+        <h2 class="titulo-form">Faça Login</h2>
+      </div>
       <label for="login" class="sr-only">Login</label>
       <input id="login" class="form-control login" placeholder="Seu usuário" required="" autofocus="" autocomplete="off">
       <label for="senha" class="sr-only">Senha</label>
