--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -5,6 +5,7 @@
 	<%- include('../partials/head') %>
 	<link rel="stylesheet" type="text/css" href="css/paciente.css">
 	<link rel="stylesheet" type="text/css" href="css/tabela.css">
+	<link type="text/css" href="BootStrap/css/bootstrap.css" rel="stylesheet">
 
 </head>
 
@@ -87,7 +88,7 @@
 			</div>
 		</div>
 	</section>
-	<table class='tabela-pacientes'>
+	<table class='tabela-pacientes table-hover text-center'>
 		<thead class="cabecalho-tabela">
 			<tr class="linha-cabecalho">
 				<th class="celula celula-pequena">Matrícula</th>
