Adicionando o icone SVG e alterando o Title das paginas
adicionado o arquivo svg para os títulos da aba do site e tela de login, estilizado para melhor visualização

--- a/Views/partials/head.ejs
+++ b/Views/partials/head.ejs
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <title>SAP</title>
-<link rel="icon" href="/img/logo.ico" type="image/x-icon">
+<link rel="icon" href="/img/sap.svg" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/reset.css">
 <link rel="stylesheet" type="text/css" href="/css/root.css">
