--- a/Views/pages/login.ejs
+++ b/Views/pages/login.ejs
@@ -13,10 +13,11 @@
     </div>
     </header>
     
+    <div>
+      <h2 class="titulo-login titulo-form">Faça Login</h2>
+    </div>
     <form class="form-login">
-      <div class=formulario-cabecalho>
-        <h2 class="titulo-form">Faça Login</h2>
-      </div>
+      <img class="logo-sap" src="img/sap.svg" alt="">
       <label for="login" class="sr-only">Login</label>
       <input id="login" class="form-control login" placeholder="Seu usuário" required="" autofocus="" autocomplete="off">
       <label for="senha" class="sr-only">Senha</label>
