Criado o login para a págian e excluído o SVG utlizado como teste
Alteração do title e a logo da página na área de login com a novo logo criada para utilizar no projeto.

--- a/Views/pages/login.ejs
+++ b/Views/pages/login.ejs
@@ -17,7 +17,7 @@
       <h2 class="titulo-login titulo-form">Faça Login</h2>
     </div>
     <form class="form-login">
-      <img class="logo-sap" src="img/sap.svg" alt="">
+      <img class="logo-sap" src="img/sap-logo.png" alt="">
       <label for="login" class="sr-only">Login</label>
       <input id="login" class="form-control login" placeholder="Seu usuário" required="" autofocus="" autocomplete="off">
       <label for="senha" class="sr-only">Senha</label>
