--- a/Views/pages/registro.ejs
+++ b/Views/pages/registro.ejs
@@ -22,12 +22,12 @@
         <label class="mb-0" for="login">Login:</label>
         <input class="mb-1 form-control" name="login" required>
         <div class="invalid-feedback">
-            Por favor, informe um nome login.
+            Por favor, informe o login.
         </div>
         <label class="mb-0" for="Senha">Senha:</label>
         <input class="mb-1 form-control" type="password" name="senha" required>
         <div class="invalid-feedback">
-            Por favor, informe um nome senha.
+            Por favor, informe a senha.
         </div>
         <label class="mb-0" for="confirmeSenha">Confirme senha:</label>
         <input class="mb-1 form-control" type="password" name="confirmeSenha" required>
