--- a/public/css/login.css
+++ b/public/css/login.css
@@ -27,7 +27,8 @@
 }
 
 .logo-sap{
-    width: 90px;
-    height: 90px;
+    width: 170px;
+    height: 80px;
     margin-bottom: 1rem;
+    border-radius: 10px;
 }
