Criado o registro controller e campo situação para inicio
Criado o campo situação, para quando cadastrar o paciente informar o sucesso ou erro do cadastro.

--- a/Views/pages/inicio.ejs
+++ b/Views/pages/inicio.ejs
@@ -136,7 +136,7 @@
 	</section>
 	<section class="campo-situacao">
 		<div class='campo-design'>
-			<p class='alerta-mensagem'></p>
+			<%- include('../partials/inicioSituacao') %>
 		</div>
 	</section>
 
