--- a/Views/partials/inicioSituacao.ejs
+++ b/Views/partials/inicioSituacao.ejs
@@ -1,9 +1,13 @@
-<% if (sucess_msg) {%>
-    <p class='alerta-sucesso'><%= sucess_msg%></p>
+<% if (sucess_msg.length>0 ) {%>
+    <div class="campo-design-sucess">
+        <p class='alerta-sucesso'><%= sucess_msg%></p>
+    </div>
 <%}%>
 
-<% if (error_msg) {%>
-    <p class='alerta-erro'><%= error_msg%></p>
+<% if (error_msg.length>0) {%>
+    <div class="campo-design-error">
+        <p class='alerta-erro'><%= error_msg%></p>
+    </div>
 <%}%>
 
 
