Tratando a criação de usuário na pagina de registro
Inseri novas validações no registro controller e criado uma nova variável para informações nas requisições.

--- a/public/css/root.css
+++ b/public/css/root.css
@@ -45,6 +45,12 @@ body{
 	font-family: "Raleway",sans-serif;
 }
 
+.link-navegacao:hover{
+	text-decoration: none;
+	color: red;
+	cursor: pointer;
+}
+
 .conteudo-cabecalho{
 	display: flex;
 	justify-content: space-between;
