--- a/Views/pages/registro.ejs
+++ b/Views/pages/registro.ejs
@@ -13,28 +13,31 @@
     <div class="container container-titulo">
         <h1 class="cadastrar-usuario">Cadastrar Usuário</h1>
     </div>
+    <div class="mensagens-aviso">
+        <%- include('../partials/registroSituacao')%>
+    </div>
     <form novalidate method="POST" action="registro/cadastrado" class="container form-registro needs-validation">
-        <label class="mb-0" for="nome">Nome:</label>
+        <label class="mb-0" for="nome" type="text" maxlength="150" >Nome:</label>
         <input class="mb-2 form-control" name="nome" required>
         <div class="invalid-feedback">
             Por favor, informe um nome valido.
         </div>
         <label class="mb-0" for="login">Login:</label>
-        <input class="mb-1 form-control" name="login" required>
+        <input class="mb-1 form-control" type="text" name="login" maxlength="20" required>
         <div class="invalid-feedback">
             Por favor, informe o login.
         </div>
         <label class="mb-0" for="Senha">Senha:</label>
-        <input class="mb-1 form-control" type="password" name="senha" required>
+        <input class="mb-1 form-control" type="password" name="senha" maxlength="15" required>
         <div class="invalid-feedback">
             Por favor, informe a senha.
         </div>
         <label class="mb-0" for="confirmeSenha">Confirme senha:</label>
-        <input class="mb-1 form-control" type="password" name="confirmeSenha" required>
+        <input class="mb-1 form-control" type="password" name="confirmeSenha" maxlength="15" required>
         <div class="invalid-feedback">
             Por favor, confirme a senha.
         </div>
-        <select name="perfil" class="mb-2 mt-2 custom-select">
+        <select name="perfil" type="text" class="mb-2 mt-2 custom-select">
             <option>RECEPTIVO</option>
             <option>ATIVO</option>
             <option>ADMIN</option>
