--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -27,3 +27,9 @@
     margin-top: 0;
     margin-bottom: .5rem;
 }
+
+.mensagens-aviso{
+    width: 50%;
+    text-align: center;
+    margin: auto;
+}
