--- a/Views/partials/loginSituacao.ejs
+++ b/Views/partials/loginSituacao.ejs
@@ -1,7 +1,3 @@
-<% if(error.length>0) {%>
-    <p class='alert alert-danger'><%=error%></p>
-<%}%>
-
-<% if(sucess.length>0) {%>
-    <p class='alert alert-danger'><%=sucess%></p>
+<% if(message.length>0) {%>
+    <p class='alert alert-danger'><%=message%></p>
 <%}%>
