--- a/Views/partials/BuscarPacientes.ejs
+++ b/Views/partials/BuscarPacientes.ejs
@@ -1,38 +1,38 @@
-<div class="organizador-busca mb-3">
-    <div class="input-group mb-3 busca-simples tamanho-input">
-        <div class="input-group mb-3">
+<div class="mb-3">
+    <div class="input-group mb-3 busca-simples">
+        <div class="input-group mb-3 tamanho-input">
             <input type="text" class="form-control" placeholder="Matricula" aria-label="Example text with two button addons" aria-describedby="button-addon3">
             <div class="input-group-prepend" id="button-addon3">
-              <button class="btn btn-outline-secondary btn-busca-simples" type="button">Buscar</button>
+              <button class="btn btn-buscaSimples " type="button">Buscar</button>
             </div>
         </div>
         
         <div class="input-group mb-3 tamanho-input">
-            <input type="text" class="form-control" placeholder="Data" aria-label="Example text with two button addons" aria-describedby="button-addon3">
+            <input type="date" class="form-control" placeholder="Data" aria-label="Example text with two button addons" aria-describedby="button-addon3">
             <div class="input-group-prepend" id="button-addon3">
-              <button class="btn btn-outline-secondary btn-busca-simples" type="button">Buscar</button>
+              <button class="btn btn-buscaSimples" type="button">Buscar</button>
             </div>
         </div>
     
         <div class="input-group mb-3 tamanho-input">
             <input type="text" class="form-control" placeholder="Status" aria-label="Example text with two button addons" aria-describedby="button-addon3">
             <div class="input-group-prepend" id="button-addon3">
-              <button class="btn btn-outline-secondary btn-busca-simples" type="button">Buscar</button>
+              <button class="btn btn-buscaSimples" type="button">Buscar</button>
             </div>
         </div>
     
         <div class="input-group mb-3 busca-nome tamanho-input">
             <input type="text" class="form-control" placeholder="Especialidade" aria-label="Example text with two button addons" aria-describedby="button-addon3">
-            <div class="input-group-prepend btn-busca-simples" id="button-addon3">
-              <button class="btn btn-outline-secondary " type="button">Buscar</button>
+            <div class="input-group-prepend" id="button-addon3">
+              <button class="btn btn-buscaSimples " type="button">Buscar</button>
             </div>
         </div>
     </div>
 
-    <div class="input-group mb-3 tamanho-input-maior">
+    <div class="input-group mb-3 tamanho-input-maior ">
         <input type="text" class="form-control" placeholder="Nome" aria-label="Example text with two button addons" aria-describedby="button-addon3">
         <div class="input-group-prepend" id="button-addon3">
-          <button class="btn btn-outline-secondary btn-busca-simples" type="button">Buscar</button>
+          <button class="btn btn-buscaSimples" type="button">Buscar</button>
         </div>
     </div>
 
