Inserindo o rota registro e logout no menu de navegação do cabeçalho

--- a/Views/pages/inicio.ejs
+++ b/Views/pages/inicio.ejs
@@ -14,7 +14,7 @@
 	</header>
 
 	<section class="formulario-cadastro">
-		<div class=formulario-cabecalho>
+		<div class="formulario-cabecalho caixa-titulo-adicionarPac">
 			<h2 class="titulo-form">Adicionar paciente</h2>
 		</div>
 		<form action="/enviado" method="POST" id="form-adiciona" class="form-adiciona">
