--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -4,4 +4,8 @@
 <nav id='menu-navegacao' class='menu-navegacao'>
     <a class='link-navegacao' href="/">Incio</a>
     <a class='link-navegacao' href="/pacientes">Pacientes</a>
+    <% if(user.perfil === "ADMIN"){%>
+        <a class='link-navegacao' href="/registro">Registro</a>
+    <%}%>
+    <a class='link-navegacao' href="/logout">Sair</a>
 </nav>
