--- a/public/css/root.css
+++ b/public/css/root.css
@@ -32,8 +32,8 @@ body{
 	margin-right: 1.5rem;
 	display: flex;
 	align-items: center;
-	width: 10%;
-	justify-content: space-around;
+	width: 20%;
+	justify-content: flex-end;
 }
 
 .link-navegacao{
@@ -43,6 +43,7 @@ body{
 	text-transform:uppercase;
 	font-weight: bold;
 	font-family: "Raleway",sans-serif;
+	margin: .5rem;
 }
 
 .link-navegacao:hover{
