Alterando o campo de filtros para buscar paciente e criando rota para buscar na tabela
Rota precisa ser configurada adequadamente

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -3,9 +3,9 @@
 
 <head>
 	<%- include('../partials/head') %>
-	<link rel="stylesheet" type="text/css" href="css/tabela.css">
-	<link type="text/css" href="BootStrap/css/bootstrap.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/paciente.css">
+	<link rel="stylesheet" type="text/css" href="/css/tabela.css">
+	<link type="text/css" href="/BootStrap/css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/css/paciente.css">
 
 </head>
 
@@ -35,6 +35,9 @@
 			<%- include ('../partials/ListaPacientes') %> 
 		</tbody>
 	</table>
+	<script src="/js/Validation/DadosConverter.js"></script>
+	<script src="/js/Validation/mascara.js"></script>
+	<script src="/js/Validation/Validacao.js"></script>
 </body>
 
 </html>
