Implementando o paciente controller para melhor paginação e ordenação, iniciando o filter controller
Get pacientes foi corrigido e funcionando, Filter Controller precisa ser alterado para que possa buscar as informações corretamente das outras páginas

--- a/Views/partials/BuscarPacientes.ejs
+++ b/Views/partials/BuscarPacientes.ejs
@@ -1,4 +1,4 @@
-<form method="POST" action="/pacientes">
+<form method="POST" action="/pacientes/filter?page=1">
   <div class="form-row busca-simples">
     <div class="col">
       <label class="form-label" for="matricula">Matricula</label>
