--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -3,7 +3,7 @@
 </div>
 <nav id='menu-navegacao' class='menu-navegacao'>
     <a class='link-navegacao' href="/">Incio</a>
-    <a class='link-navegacao' href="/pacientes">Pacientes</a>
+    <a class='link-navegacao' href="/pacientes/?page=1">Pacientes</a>
     <% if(user.perfil === "ADMIN"){%>
         <a class='link-navegacao' href="/registro">Registro</a>
     <%}%>
