--- a/Views/partials/ListaPacientes.ejs
+++ b/Views/partials/ListaPacientes.ejs
@@ -1,12 +1,14 @@
-<% pacientes.forEach( (paciente)=> {%>
-    <tr class="tr-conteudo">
-        <td class="td-conteudo"><%=paciente.Matricula%></td>
-        <td class="td-conteudo"><%=paciente.DataCriacao%></td>
-        <td class="td-conteudo"><%=paciente.Nome%></td>
-        <td class="td-conteudo"><%=paciente.Nascimento%></td>
-        <td class="td-conteudo"><%=paciente.Telefone%></td>
-        <td class="td-conteudo"><%=paciente.Celular%></td>
-        <td class="td-conteudo"><%=paciente.Especialidade%></td>
-        <td class="td-conteudo"><%=paciente.Observacao%></td>
-    </tr>
-<%})%>
+<% if(pacientes.rows) { %>
+    <% pacientes.rows.forEach( (paciente)=> {%>
+        <tr class="tr-conteudo">
+            <td class="td-conteudo"><%=paciente.Matricula%></td>
+            <td class="td-conteudo"><%=paciente.DataCriacao%></td>
+            <td class="td-conteudo"><%=paciente.Nome%></td>
+            <td class="td-conteudo"><%=paciente.Nascimento%></td>
+            <td class="td-conteudo"><%=paciente.Telefone%></td>
+            <td class="td-conteudo"><%=paciente.Celular%></td>
+            <td class="td-conteudo"><%=paciente.Especialidade%></td>
+            <td class="td-conteudo"><%=paciente.Observacao%></td>
+        </tr>
+    <%})%>
+<%}%>
