configurado o partials de paginação

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -18,6 +18,9 @@
 	<section class="campo-busca">
 		<%- include('../partials/BuscarPacientes') %>
 	</section>
+	<div class="numero-paginas">
+		<%- include('../partials/paginas')%>
+	</div>
 	<table class='tabela-pacientes table-hover text-center'>
 		<thead class="cabecalho-tabela">
 			<tr class="linha-cabecalho">
