--- a/Views/pages/registro.ejs
+++ b/Views/pages/registro.ejs
@@ -18,22 +18,22 @@
     </div>
     <form novalidate method="POST" action="registro/cadastrado" class="container form-registro needs-validation">
         <label class="mb-0" for="nome" type="text" maxlength="150" >Nome:</label>
-        <input class="mb-2 form-control" name="nome" required>
+        <input class="mb-2 form-control" name="nome" autocomplete="off" required>
         <div class="invalid-feedback">
             Por favor, informe um nome valido.
         </div>
         <label class="mb-0" for="login">Login:</label>
-        <input class="mb-1 form-control" type="text" name="login" maxlength="20" required>
+        <input class="mb-1 form-control" type="text" name="login" autocomplete="off" maxlength="20" required>
         <div class="invalid-feedback">
             Por favor, informe o login.
         </div>
         <label class="mb-0" for="Senha">Senha:</label>
-        <input class="mb-1 form-control" type="password" name="senha" maxlength="15" required>
+        <input class="mb-1 form-control" type="password" name="senha" autocomplete="off" maxlength="15" required>
         <div class="invalid-feedback">
             Por favor, informe a senha.
         </div>
         <label class="mb-0" for="confirmeSenha">Confirme senha:</label>
-        <input class="mb-1 form-control" type="password" name="confirmeSenha" maxlength="15" required>
+        <input class="mb-1 form-control" type="password" name="confirmeSenha" autocomplete="off" maxlength="15" required>
         <div class="invalid-feedback">
             Por favor, confirme a senha.
         </div>
